# HPNotification

./: .clang-format  .gitignore  CMakeLists.txt  HPNotification.json  HealthNotes.json  README.md  dllmain.cpp
src/: dllmain.cpp  plugin-utils.h  signatures.h  supplemental.cpp
